// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`placeholder should be wrapped with a CustomAnimation when the customAnimation prop is set 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "width": "100%",
    }
  }
  testID="custom-animation"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#efefef",
            "borderRadius": 3,
            "height": 12,
            "marginBottom": 12,
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#efefef",
            "borderRadius": 3,
            "height": 12,
            "marginBottom": 12,
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#efefef",
            "borderRadius": 3,
            "height": 12,
            "marginBottom": 0,
            "width": "100%",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`placeholder should be wrapped with an Animation when animate prop is set to "fade" 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "opacity": 0.5,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#efefef",
            "borderRadius": 3,
            "height": 12,
            "marginBottom": 12,
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#efefef",
            "borderRadius": 3,
            "height": 12,
            "marginBottom": 12,
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#efefef",
            "borderRadius": 3,
            "height": 12,
            "marginBottom": 0,
            "width": "100%",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`placeholder should display the whenReadyRender when isReady is true 1`] = `
<View
  testID="when-ready-render"
/>
`;

exports[`placeholder should have a component on the left side when renderLeft is provided 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "marginRight": 12,
      }
    }
  >
    <Text>
      Left content
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#efefef",
            "borderRadius": 3,
            "height": 12,
            "marginBottom": 12,
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#efefef",
            "borderRadius": 3,
            "height": 12,
            "marginBottom": 12,
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#efefef",
            "borderRadius": 3,
            "height": 12,
            "marginBottom": 0,
            "width": "100%",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`placeholder should have a component on the right side when renderRight is provided 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#efefef",
            "borderRadius": 3,
            "height": 12,
            "marginBottom": 12,
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#efefef",
            "borderRadius": 3,
            "height": 12,
            "marginBottom": 12,
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#efefef",
            "borderRadius": 3,
            "height": 12,
            "marginBottom": 0,
            "width": "100%",
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "marginLeft": 12,
      }
    }
  >
    <Text>
      Right content
    </Text>
  </View>
</View>
`;

exports[`placeholder should match snapshot 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#efefef",
            "borderRadius": 3,
            "height": 12,
            "marginBottom": 12,
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#efefef",
            "borderRadius": 3,
            "height": 12,
            "marginBottom": 12,
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#efefef",
            "borderRadius": 3,
            "height": 12,
            "marginBottom": 0,
            "width": "100%",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`placeholder shouldnt display anything when whenReadyRender is undefined 1`] = `null`;
